# rest-auth-scaffold-fastapi

./: README.md
AuthScaffold/: README.md  pyproject.toml
AuthScaffold/src/: main.py
