[tool.poetry]
name = "authscaffold"
version = "0.1.0"
description = "A reusable boilerplate for implementing authentication and authorization in REST APIs, providing a robust foundation for user management and secure access control."
authors = ["idealkingdom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
